--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@ Navbar
       </div>
 
       <div class="col-md-8">
-        <p class="fs-5">
-          I’m a software developer with hands-on experience in Java, Spring Boot, MySQL, Servlets, and JDBC.
-          I’ve built projects including an Online Course Selling Platform and a Hospital Management System featuring secure authentication, database interaction, and UI-based automation.
-          With 350+ DSA problems solved across LeetCode, GFG, and CodeChef, I’m continuously improving my problem-solving skills.
+        <p class="fs-5">Aspiring Software Engineer with hands-on experience in Java, Spring Boot, MySQL, Servlets, JDBC,
+          and frontend technologies (HTML, CSS, JavaScript). I have built projects including an Online Course Selling Platform, 
+          Hospital Management System, Gym Landing Page, and an AI Image Generator Web Application, featuring secure authentication, 
+          database interactions, and UI-based automation. With 350+ DSA problems solved across LeetCode, GeeksforGeeks, and CodeChef, 
+          I continuously work on improving my problem-solving and software development skills.
         </p>
       </div>
     </div>
@@ -243,3 +244,4 @@ Navbar
 <script src="script.js"></script>
 </body>
 </html>
+
