Fix HTML formatting and update contact section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@ Navbar
   </div>
 
   <div class="skill-card">
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React JS">
+   <p>React JS</p>
+ </div>
+
+  <div class="skill-card">
     <i class="fa-brands fa-github skill-icon git"></i>
     <h5>Git & GitHub</h5>
   </div>
@@ -244,4 +249,5 @@ Navbar
 <script src="script.js"></script>
 </body>
 </html>
+
 
