add new project

--- a/projects.html
+++ b/projects.html
@@ -262,6 +262,54 @@
       </div>
     </div>
   </div>
+
+      <br>
+  
+
+  <!-- Project : Blog Management System -->
+<div class="col-md-6">
+  <div class="project-card p-4 shadow-sm rounded bg-white h-100" data-aos="fade-up">
+    <div class="d-flex align-items-center mb-3">
+      <i class="fa-solid fa-blog fa-2x text-primary me-3"></i>
+      <h4 class="fw-bold mb-0">Blog Management System</h4>
+    </div>
+
+    <p>
+      Built a modern React-based blog management system with secure authentication
+      and role-based access using Appwrite. Users can create, edit, and manage blogs
+      through a clean and responsive interface.
+    </p>
+
+    <ul class="mb-3 ps-3">
+      <li>Secure login & signup with Appwrite authentication</li>
+      <li>Protected routes and global state management using Redux Toolkit</li>
+      <li>Rich text blog editor integrated using TinyMCE with form validation</li>
+      <li>Reusable components and responsive UI built with Tailwind CSS</li>
+    </ul>
+
+    <div class="mb-3">
+      <span class="badge bg-dark">React.js</span>
+      <span class="badge bg-dark">Appwrite</span>
+      <span class="badge bg-dark">Redux Toolkit</span>
+      <span class="badge bg-dark">TinyMCE</span>
+      <span class="badge bg-dark">Tailwind CSS</span>
+    </div>
+
+    <div class="d-flex gap-2">
+      <a href="https://blog-application-6kuu.vercel.app/"
+         class="btn btn-outline-dark btn-sm"
+         target="_blank">
+        Live Demo
+      </a>
+
+      <a href="https://github.com/Aman-016/BlogApplication"
+         class="btn btn-dark btn-sm"
+         target="_blank">
+        GitHub
+      </a>
+    </div>
+  </div>
+</div>
   
 </section><!-- FOOTER -->
 <footer class="bg-dark text-white text-center py-3">
@@ -270,3 +318,4 @@
 
 </body>
 </html>
+
