--- a/projects.html
+++ b/projects.html
@@ -86,6 +86,56 @@
     </div>
   </div>
 </div>
+<!-- Project : Streamify -->
+<div class="col-md-6">
+  <div class="project-card p-4 shadow-sm rounded bg-white h-100" data-aos="fade-up">
+    
+    <div class="d-flex align-items-center mb-3">
+      <i class="fa-solid fa-play-circle fa-2x text-danger me-3"></i>
+      <h4 class="fw-bold mb-0">Streamify – Full Stack Web Application</h4>
+    </div>
+
+    <p>
+      Developed a secure and scalable full-stack web application featuring
+      modern authentication, optimized data handling, and a responsive user
+      experience.
+    </p>
+
+    <ul class="mb-3 ps-3">
+      <li>JWT-based authentication with protected routes</li>
+      <li>User onboarding workflow with profile completion and avatar management</li>
+      <li>Optimized data fetching and caching using TanStack React Query</li>
+      <li>RESTful APIs built using Node.js, Express.js, and MongoDB</li>
+      <li>Responsive UI with Tailwind CSS and reusable components</li>
+    </ul>
+
+    <div class="mb-3">
+      <span class="badge bg-dark">React.js</span>
+      <span class="badge bg-dark">Vite</span>
+      <span class="badge bg-dark">Tailwind CSS</span>
+      <span class="badge bg-dark">Node.js</span>
+      <span class="badge bg-dark">Express.js</span>
+      <span class="badge bg-dark">MongoDB</span>
+      <span class="badge bg-dark">JWT</span>
+      <span class="badge bg-dark">TanStack Query</span>
+    </div>
+
+    <div class="d-flex gap-2">
+      <a href="https://streamify-chat-applications.onrender.com/"
+         class="btn btn-outline-dark btn-sm"
+         target="_blank">
+        Live Demo
+      </a>
+
+      <a href="https://github.com/Aman-016/Streamify_chat_Applications"
+         class="btn btn-dark btn-sm"
+         target="_blank">
+        GitHub
+      </a>
+    </div>
+
+  </div>
+</div>
 
 
       <!-- Project 1 -->
@@ -261,9 +311,8 @@
         </div>
       </div>
     </div>
-  </div>
-
-      <br>
+    
+  <br>
   
 
   <!-- Project : Blog Management System -->
@@ -310,6 +359,9 @@
     </div>
   </div>
 </div>
+  </div>
+
+
   
 </section><!-- FOOTER -->
 <footer class="bg-dark text-white text-center py-3">
@@ -318,4 +370,3 @@
 
 </body>
 </html>
-
