--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ Navbar
   <div class="container text-center text-white">
     <h1 class="fw-bold display-4">Aman Kumar</h1>
     <p class="fs-4">Aspiring Software Engineer </p>
-    <a href="assets/resume.pdf.pdf" class="btn btn-primary btn-lg mt-3" target="_blank">Download Resume</a>
+    <a href="assets/
+Aman (3).pdf" class="btn btn-primary btn-lg mt-3" target="_blank">Download Resume</a>
   </div>
 </header>
 
@@ -249,5 +250,6 @@ Navbar
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
