--- a/projects.html
+++ b/projects.html
@@ -136,32 +136,55 @@
 
   </div>
 </div>
+<!-- Project : MERN Stack Blog Application -->
+<div class="col-md-6">
+  <div class="project-card p-4 shadow-sm rounded bg-white h-100" data-aos="fade-up">
 
+    <div class="d-flex align-items-center mb-3">
+      <i class="fa-solid fa-blog fa-2x text-primary me-3"></i>
+      <h4 class="fw-bold mb-0">MERN Stack Blog Application</h4>
+    </div>
 
-      <!-- Project 1 -->
-      <div class="col-md-6">
-        <div class="project-card p-4 shadow-sm rounded bg-white h-100">
-          <div class="d-flex align-items-center mb-3">
-            <i class="fa-solid fa-cart-shopping fa-2x text-primary me-3"></i>
-            <!-- <h4 class="fw-bold mb-0">Online Selling Course Platform</h4> -->
-             <h4><i class="icon-blue bi bi-cart"></i>Online Selling Course Platform  (In Progress)</h4>
-          </div>
-          <p>
-            Built a full-stack platform using Spring Boot, Servlets, MySQL, Spring Security, and MVC architecture.
-            Added secure authentication, course catalog, enrollments, and payment workflow.
-          </p>
-          <div class="mb-3">
-            <span class="badge bg-dark">Spring Boot</span>
-            <span class="badge bg-dark">MySQL</span>
-            <span class="badge bg-dark">Security</span>
-            <span class="badge bg-dark">MVC</span>
-          </div>
-          <div class="d-flex gap-2">
-            <a class="btn btn-outline-dark btn-sm disabled">Live Demo</a>
-            <a class="btn btn-dark btn-sm disabled">GitHub</a>
-          </div>
-        </div>
-      </div>
+    <p>
+      Built a full-stack blog platform with secure authentication, role-based access,
+      and modern UI. Users can create, edit, like, and search blogs through a responsive
+      interface with real-time updates.
+    </p>
+
+    <ul class="mb-3 ps-3">
+      <li>JWT authentication with Google OAuth integration</li>
+      <li>CRUD functionality for posts, comments, likes, search & filters</li>
+      <li>Admin dashboard with role-based access control</li>
+      <li>Firebase image upload integration</li>
+      <li>Deployed frontend on Vercel and backend on Render</li>
+    </ul>
+
+    <div class="mb-3">
+      <span class="badge bg-dark">React</span>
+      <span class="badge bg-dark">Node.js</span>
+      <span class="badge bg-dark">Express</span>
+      <span class="badge bg-dark">MongoDB</span>
+      <span class="badge bg-dark">JWT</span>
+      <span class="badge bg-dark">Firebase</span>
+      <span class="badge bg-dark">Tailwind CSS</span>
+    </div>
+
+    <div class="d-flex gap-2">
+      <a href="https://blog-application-1-ih88.onrender.com"
+         class="btn btn-outline-dark btn-sm"
+         target="_blank">
+        Live Demo
+      </a>
+
+      <a href="https://github.com/Aman-016/Blog-Application"
+         class="btn btn-dark btn-sm"
+         target="_blank">
+        GitHub
+      </a>
+    </div>
+
+  </div>
+</div>
 
       <!-- Project 2 -->
       <div class="col-md-6">
@@ -360,6 +383,33 @@
   </div>
 </div>
   </div>
+
+  <br/>
+  
+      <!-- Project 1 -->
+      <div class="col-md-6">
+        <div class="project-card p-4 shadow-sm rounded bg-white h-100">
+          <div class="d-flex align-items-center mb-3">
+            <i class="fa-solid fa-cart-shopping fa-2x text-primary me-3"></i>
+            <!-- <h4 class="fw-bold mb-0">Online Selling Course Platform</h4> -->
+             <h4><i class="icon-blue bi bi-cart"></i>Online Selling Course Platform  (In Progress)</h4>
+          </div>
+          <p>
+            Built a full-stack platform using Spring Boot, Servlets, MySQL, Spring Security, and MVC architecture.
+            Added secure authentication, course catalog, enrollments, and payment workflow.
+          </p>
+          <div class="mb-3">
+            <span class="badge bg-dark">Spring Boot</span>
+            <span class="badge bg-dark">MySQL</span>
+            <span class="badge bg-dark">Security</span>
+            <span class="badge bg-dark">MVC</span>
+          </div>
+          <div class="d-flex gap-2">
+            <a class="btn btn-outline-dark btn-sm disabled">Live Demo</a>
+            <a class="btn btn-dark btn-sm disabled">GitHub</a>
+          </div>
+        </div>
+      </div>
 
 
   
