--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@
     </div>
 
     <div class="d-flex gap-2">
-      <a href="https://blog-application-1-ih88.onrender.com"
+      <a href="https://blog-application-y1pm.onrender.com"
          class="btn btn-outline-dark btn-sm"
          target="_blank">
         Live Demo
@@ -420,3 +420,4 @@
 
 </body>
 </html>
+
